All logic and functionality working now going to finsih styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,12 @@ aside {
     gap: 5px;
 }
 
+.card-icon {
+    height: 75px;
+    width: 85px;
+
+}
+
 .forecast-card {
     flex: 1 1 200px;
     flex-grow: 0;
