--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 * {
-    padding: 5px;
+    font-family: Helvetica,Georgia, Cambria, "Times New Roman", Times, serif !important
 }
 
-main {
+main{
+    padding-left: 25px;
+    padding-right: 25px;
     display: flex;
 }
 
@@ -13,36 +15,42 @@ h1 {
 }
 
 #header {
-    background: linear-gradient(0.75turn, blue, lightblue);
+    display: flex;
+    background: linear-gradient(0.75turn, #210C4F, #3462BB);
+    height: 15vh;
+    margin-bottom: 25px;
+    align-items: center;
+    justify-content: center;
+}
+
+aside {
+    padding: 5px;
+    width: 35%;
+    height: auto;
+    margin-right: 20px;
 }
 
 #asideLine {
-    border: 1px solid red;
+    border: 1px solid grey;
 }
 
 #resultsContainer {
-    width: 75%;
-    height: auto;
+    width: 65%;
+
 }
 
 #titleIcon {
     display: inline;
 }
-aside {
-    width: 25%;
-    border: 1px solid black;
-    height: auto;
-    margin-right: 10px;
-}
 
 #currentWeather {
     border: 1px solid black;
+    padding: 5px;
+    min-height: 33vh;
 }
 
 #fiveDayContainer {
-    border: 1px solid black;
-    margin-top: 10px;
-
+    margin-top: 15px;
 }
 
 #cardContainer {
@@ -50,13 +58,19 @@ aside {
     flex-wrap: wrap;
     justify-content: flex-start;
     text-align: left;
-    gap: 5px;
+    gap: 20px;
+}
+
+.card-header {
+    font-size: larger;
+    font-weight: bold;
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
 }
 
 .card-icon {
     height: 75px;
     width: 85px;
-
 }
 
 .forecast-card {
@@ -70,6 +84,14 @@ input {
 
 button {
     margin-top: 20px !important;
-    display: block;
     width: 100%
+}
+
+.search-history{
+    width: auto;
+    margin-left: 10px;
+}
+
+#clearHistory {
+    color: white;
 }
